--- a/2.html
+++ b/2.html
@@ -1,6 +1,16 @@
 <head>
 <title>WEB1-html</title>
 <meta charset="utf-8">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-136332221-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-136332221-1');
+</script>
+
 </head>
 
 <h1><a href="index.html">WEB</a></h1>
