--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <head>
 <title>WEB1-html</title>
 <meta charset="utf-8">
+<style>
+  a:visited{
+    color: gray;
+  }
+  a {
+    color:black;
+    text-decoration: none;
+  }
+  h1{
+    text-align: center;
+    font-size: 10em;
+  }
+  </style>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136332221-1"></script>
 <script>
@@ -10,7 +23,6 @@
 
   gtag('config', 'UA-136332221-1');
 </script>
-
 </head>
 
 <h1><a href="https://www.youtube.com/watch?v=F9GujgK0y2M">WEB</a></h1>
@@ -22,8 +34,16 @@
 <li><a href="3.html">javascript</a></li>
 </ol>
 
+<!--
+<ol>
+<li><a href="1.html"><font color="red">HTML</font></a></li>
+<li><a href="2.html"style="color:red; text-decoration: underline">CSS</a></li>
+<li><a href="3.html"><font color="red">javascript</font></a></li>
+</ol>
+-->
 
-<h1><a href="https://www.w3schools.com/tags/tag_br.asp" target="_blank" title="html5 specification">index.HTML</a></h1>
+
+<h2><a href="https://www.w3schools.com/tags/tag_br.asp" target="_blank" title="html5 specification">index.HTML</a></h2>
 <h2><p>coding is not difficult!</p></h2>
 
 <p><div id="disqus_thread"></div>
